--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.2.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.1.8",
     "@prisma/client": "^5.19.1",
     "@types/timeout": "^0.2.2",
@@ -64,6 +65,7 @@
     "@nestjs/testing": "^10.2.0",
     "@types/express": "^4.17.21",
     "@types/jest": "29.5.3",
+    "@types/multer": "^1.4.12",
     "@types/node": "18.17.6",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
